# StarSail

./: .gitignore  Notes.md  README.md
ground-station/: package-lock.json  package.json
ground-station/src/: App.tsx
simulation/: CMakeLists.txt
simulation/src/: common.h  dynamics.cpp  dynamics.h  integrator.cpp  integrator.h  main.cpp
simulation/src/GNC/: control.cpp  control.h
simulation/src/comms/: telemetry.cpp  telemetry.h
